# devenv

./: CMakeLists.txt  build.sh  hello.c  main.c
file-io/: CMakeLists.txt  file-io-posix.c
file-io/include/: file-io-posix.h
